Bug 1543045 - Break strings for long CSS property names and values. r=gl
Introduce `overflow-wrap: break-word` to CSS declarations in Rules view and Changes panel to prevent long strings from causing unwanted horizontal scroll

Differential Revision: https://phabricator.services.mozilla.com/D27120

UltraBlame original commit: 4e987641febce56ca92c086093965f2192531387

--- a/devtools/client/themes/changes.css
+++ b/devtools/client/themes/changes.css
@@ -861,6 +861,18 @@ block
 }
 .
 changes__declaration
+{
+overflow
+-
+wrap
+:
+break
+-
+word
+;
+}
+.
+changes__declaration
 -
 name
 {
